--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,12 +134,12 @@ a {
 
 /* Buttons (Optional Custom Tailwind Styling) */
 .btn-outline-primary {
-  @apply text-[#2c83ec] border border-[#2c83ec] font-semibold rounded px-4 py-[8px] text-lg transition-all my-1 duration-200 cursor-pointer;
+  @apply text-[#2c83ec] border border-[#2c83ec] font-semibold rounded px-4 py-[8px] text-xl transition-all my-1 duration-200 cursor-pointer;
   background-color: transparent;
 }
 
 .btn-outline-primary:hover {
-  @apply bg-[#d3dbe6] ;
+  @apply bg-[#f1f8fe] ;
 }
 
 /* Input & Text */
