--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@
   --font-color: #323232;
   --border-color: #f2f2f2;
   --header-bg: rgb(3, 16, 51);
+  --store-bg:#f6f7f9;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
