--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,6 +87,7 @@ body {
   /* overflow-x: hidden; */
   /* overflow-y: auto; */
   scroll-behavior: smooth;
+  height: fit-content;
 }
 
 *::before,
