--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,7 @@ body {
   /* overflow-x: hidden; */
   /* overflow-y: auto; */
   scroll-behavior: smooth;
-  height: fit-content;
+  /* height: fit-content; */
 }
 
 *::before,
@@ -100,6 +100,12 @@ body {
 html {
   font-size: 62.5%; /* 1rem = 10px */
   overflow-x: hidden;
+}
+
+html,
+body {
+  height: 100%;
+  overflow: hidden; /* prevent double scroll */
 }
 
 /* Tailwind Typography System */
