--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,8 +86,8 @@
 body {
   /* overflow-x: hidden; */
   /* overflow-y: auto; */
-  scroll-behavior: smooth;
-  height: fit-content;
+  /* scroll-behavior: smooth; */
+  /* height: fit-content; */
 }
 
 *::before,
@@ -106,7 +106,9 @@ html {
 html,
 body {
   height: 100%;
-  overflow: hidden; /* prevent double scroll */
+  overflow: hidden; 
+  scroll-behavior: smooth;
+
 }
 
 /* Tailwind Typography System */
@@ -171,10 +173,6 @@ input {
   font-weight: 700;
 }
 
-input {
-  /* border: none; */
-  /* outline: none; */
-}
 
 /* Image Reset */
 img {
