--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@
   --font-color: #323232;
   --border-color: #f2f2f2;
   --header-bg: rgb(3, 16, 51);
-  --store-bg: #f6f7f9;
+  --store-bg:#f6f7f9;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -87,7 +87,7 @@ body {
   /* overflow-x: hidden; */
   /* overflow-y: auto; */
   scroll-behavior: smooth;
-  /* height: fit-content; */
+  height: fit-content;
 }
 
 *::before,
@@ -100,13 +100,6 @@ body {
 html {
   font-size: 62.5%; /* 1rem = 10px */
   overflow-x: hidden;
-}
-
-/* Fix layout calculation */
-html,
-body {
-  height: 100%;
-  overflow: hidden; /* prevent double scroll */
 }
 
 /* Tailwind Typography System */
@@ -143,7 +136,7 @@ a {
 
 /* Buttons (Optional Custom Tailwind Styling) */
 
-button {
+button{
   cursor: pointer;
 }
 
@@ -156,20 +149,25 @@ button {
   @apply bg-[#f1f8fe];
 }
 
+
 .btn-primary {
   @apply text-white border border-[#2c83ec]  font-medium rounded px-4 py-[6px] text-xl transition-all my-1 duration-200 cursor-pointer;
-  background-color: #2c83ec;
+  background-color:#2c83ec ;
 }
 
 .btn-primary:hover {
   @apply border-[#418ce7] bg-white text-[#2c83ec];
 }
 
+
+
+
 /* Input & Text */
 input {
   font-size: 1.1rem;
   font-weight: 700;
 }
+
 
 input {
   /* border: none; */
